# the-imposter

./: LICENSE  README.md  the-imposter.cabal
example/: problem01.hs  problem02.hs  problem03.hs  problem04.hs  problem05.hs  problem06.hs  problem07.hs  problem08.hs  problem09.hs  problem10.hs  problem11.hs  problem12.hs
src/Math/: TheImposter.hs
